# video-wall

./: .gitmodules
docker/: Dockerfile
docker/mars-ci/: Dockerfile
docker/mars-dev/: Dockerfile  build.sh
docker/ubu-cef-sdl/: Dockerfile
media-player/: .clang-format  .gitignore  CMakeLists.txt
media-player/cmake/: CodeCoverage.cmake  Compilers.cmake  Valgrind.cmake
media-player/cmake/Modules/: FindCEF.cmake  GTEST_ADD_TESTS.cmake
media-player/examples/: CMakeLists.txt
media-player/examples/audio-example/: CMakeLists.txt  audio-client.cxx
media-player/examples/cef-simple-client/: CMakeLists.txt  cef-simple.cxx  cef-widget.cxx
media-player/examples/cef-simple-client/webgl-hello-world-master/: webgl-demo.js
media-player/examples/ffmpeg-sdl-client/: CMakeLists.txt  ffmpeg-sdl-client.cxx
media-player/examples/image-client/: CMakeLists.txt  image-client.cxx
media-player/examples/libvlc-sdl/: CMakeLists.txt  main.cxx
media-player/examples/splashscreen/: CMakeLists.txt  splashscreen.cxx
media-player/examples/text-client/: CMakeLists.txt  text-client.cxx
media-player/examples/video-html-client/: CMakeLists.txt  video-html-client.cxx
media-player/integration_tests/: CMakeLists.txt
media-player/integration_tests/cef-widget/: CMakeLists.txt  html_subprocess.cxx  htmlwidget_tests.cxx
media-player/integration_tests/ffmpeg/: CMakeLists.txt  ffmpeg_tests.cxx
media-player/integration_tests/screenmanager-x11/: CMakeLists.txt  screenmanager_tests.cxx
media-player/integration_tests/sdlaudio/: CMakeLists.txt  sdlaudio_tests.cxx
media-player/scripts/: clang-format.sh  clang-tidy.sh  compile_docker.sh
media-player/srcs/: CMakeLists.txt  main.cxx
media-player/srcs/audio/: CMakeLists.txt  sdlaudio.cxx  sdlaudio.h
media-player/srcs/common/: CMakeLists.txt  configuration.h  configurationmanager.cxx  configurationmanager.h  fps.hpp  iconfigurationmanager.h  lambda_visitor.hpp  log.hpp  loggers.cxx  screenmanager.cxx  screenmanager.h  stopwatch.hpp  systemmanager.cxx  systemmanager.h  xmlconfiguration.cxx  xmlconfiguration.h
media-player/srcs/core/: CMakeLists.txt  configuration.cxx  configuration.h  globalconfiguration.cxx  globalconfiguration.h  iconfigurationmanager.h  systemmanager.cxx  systemmanager.h
media-player/srcs/core/json/: default_config.json
media-player/srcs/rendering/: CMakeLists.txt  events.hpp  ffmpegrenderer.cxx  ffmpegrenderer.h  ifont.h  iimage.h  irenderer.h  itexture.h  ivideorenderer.h  renderer.cxx  renderer.h  renderer_types.hpp  sdlhelpers.h  sdlhelpers.hpp  sdlrenderer.cxx  sdlrenderer.h  texture.cxx  texture.h
media-player/srcs/rendering/sdl/: CMakeLists.txt  sdlfont.cxx  sdlfont.h  sdlhelpers.cxx  sdlhelpers.h  sdlimage.cxx  sdlimage.h  sdllogging.hpp  sdlrenderer.cxx  sdlrenderer.h  sdltexture.cxx  sdltexture.h
media-player/srcs/ui/: CMakeLists.txt  cefbrowserclient.cxx  cefbrowserclient.h  cefrenderhandler.cxx  cefrenderhandler.h  screenmanager.cxx  screenmanager.h
media-player/srcs/ui/widgets/: iwidget.h  videowidget.cxx  videowidget.h
media-player/srcs/widgets/: CMakeLists.txt  iwidget.h  widget.cxx  widget.h
media-player/srcs/widgets/html/: cefbrowserclient.cxx  cefbrowserclient.h  cefrenderhandler.cxx  cefrenderhandler.h  htmlwidget.cxx  htmlwidget.h
media-player/srcs/widgets/image/: imagewidget.cxx  imagewidget.h
media-player/srcs/widgets/text/: textwidget.cxx  textwidget.h
media-player/srcs/widgets/video/: ffmpegrenderer.cxx  ffmpegrenderer.h  ivideorenderer.h  videowidget.cxx  videowidget.h
media-player/tests/: CMakeLists.txt  logger_helpers.cxx
media-player/tests/common/: CMakeLists.txt  configurationmanager_tests.cxx  logger_tests.cxx  screenmanager_tests.cxx  systemmanager_tests.cxx
media-player/tests/core/: CMakeLists.txt  globalconfiguration_tests.cxx
media-player/tests/mocks/: CMakeLists.txt  configurationmanagermock.hpp  renderermock.hpp  videobackendmock.hpp  widgetmock.hpp
media-player/tests/rendering/: CMakeLists.txt  ffmpeg_tests.cxx  renderer_tests.cxx
media-player/tests/ui/: CMakeLists.txt  screenmanager_tests.cxx
media-player/tests/widgets/: CMakeLists.txt  html_subprocess.cxx  htmlwidget_tests.cxx  textwidget_tests.cxx  videowidget_tests.cxx  widget_tests.cxx
